--- a/SimpleMusicPlayer/Base.lproj/Main.storyboard
+++ b/SimpleMusicPlayer/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Asr-6I-71f">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,18 +13,18 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SimpleMusicPlayer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="844" height="390"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="hWW-Wf-XXe">
-                                <rect key="frame" x="0.0" y="143" width="390" height="667"/>
+                                <rect key="frame" x="0.0" y="79" width="844" height="277"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="VOW-2Y-O2r" detailTextLabel="N1d-7D-nQE" style="IBUITableViewCellStyleSubtitle" id="n5Q-20-MTv">
-                                        <rect key="frame" x="0.0" y="50" width="390" height="43.666667938232422"/>
+                                        <rect key="frame" x="0.0" y="50" width="844" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="n5Q-20-MTv" id="Bqo-dN-gvv">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="844" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="VOW-2Y-O2r">
@@ -70,7 +70,7 @@
             <objects>
                 <viewController storyboardIdentifier="player" id="AAk-o2-CYd" customClass="PlayerViewController" customModule="SimpleMusicPlayer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WZf-7k-gwM">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="844" height="390"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="feM-Yj-u1h">
@@ -99,7 +99,7 @@
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O3o-zC-lZP">
-                                <rect key="frame" x="155" y="660" width="80" height="80"/>
+                                <rect key="frame" x="382" y="433" width="80" height="80"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" image="YES"/>
                                 </accessibility>
@@ -114,7 +114,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kG9-OU-fZe">
-                                <rect key="frame" x="267" y="682.66666666666663" width="56" height="35"/>
+                                <rect key="frame" x="494" y="455.66666666666669" width="56" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="56" id="WXN-ci-Tss"/>
                                     <constraint firstAttribute="height" constant="35" id="klz-rb-wN1"/>
@@ -126,7 +126,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bfm-zi-wpE">
-                                <rect key="frame" x="67" y="682.66666666666663" width="56" height="35"/>
+                                <rect key="frame" x="294" y="455.66666666666669" width="56" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="9HC-rG-zhH"/>
                                     <constraint firstAttribute="width" constant="56" id="cZT-eQ-NUO"/>
@@ -161,20 +161,54 @@
             </objects>
             <point key="canvasLocation" x="1861.5384615384614" y="-2.1327014218009479"/>
         </scene>
-        <!--View Controller-->
+        <!--Car Player View Controller-->
         <scene sceneID="o69-QR-HpT">
             <objects>
-                <viewController storyboardIdentifier="carPlayer" id="XnX-Lk-X3E" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="carPlayer" id="XnX-Lk-X3E" customClass="CarPlayerViewController" customModule="SimpleMusicPlayer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fln-8N-BJV">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="844" height="390"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJX-zm-UOg">
+                                <rect key="frame" x="360" y="124" width="124" height="67"/>
+                                <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="60"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jNT-ww-Kvq">
+                                <rect key="frame" x="391" y="228" width="62" height="30"/>
+                                <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="27"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ePc-fh-hHU">
+                                <rect key="frame" x="37" y="35" width="62" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Back"/>
+                                <connections>
+                                    <action selector="pressedBack:" destination="XnX-Lk-X3E" eventType="touchUpInside" id="9HB-Yb-aI4"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="jnp-UM-hco"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="UJX-zm-UOg" firstAttribute="centerY" secondItem="fln-8N-BJV" secondAttribute="centerY" constant="-37.5" id="0Pq-2Z-hXb"/>
+                            <constraint firstItem="jNT-ww-Kvq" firstAttribute="centerY" secondItem="fln-8N-BJV" secondAttribute="centerY" constant="48" id="Ibc-Au-h30"/>
+                            <constraint firstItem="ePc-fh-hHU" firstAttribute="centerY" secondItem="fln-8N-BJV" secondAttribute="centerY" constant="-142.5" id="P2t-V4-7hY"/>
+                            <constraint firstItem="UJX-zm-UOg" firstAttribute="centerX" secondItem="fln-8N-BJV" secondAttribute="centerX" id="Wqf-WV-x7h"/>
+                            <constraint firstItem="jNT-ww-Kvq" firstAttribute="centerX" secondItem="fln-8N-BJV" secondAttribute="centerX" id="dBn-vE-4ya"/>
+                            <constraint firstItem="ePc-fh-hHU" firstAttribute="centerX" secondItem="fln-8N-BJV" secondAttribute="centerX" constant="-354" id="y8c-hx-y9n"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="artistNameLabel" destination="jNT-ww-Kvq" id="hja-Em-jpZ"/>
+                        <outlet property="songNameLabel" destination="UJX-zm-UOg" id="vpb-0l-wQk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yVw-oY-HdC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2508" y="-2"/>
+            <point key="canvasLocation" x="2507.6923076923076" y="-2.1327014218009479"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Z5r-rH-6bt">
@@ -182,7 +216,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Asr-6I-71f" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="KwR-OK-FLX">
-                        <rect key="frame" x="0.0" y="47" width="390" height="96"/>
+                        <rect key="frame" x="0.0" y="47" width="844" height="32"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
