--- a/SimpleMusicPlayer/Base.lproj/Main.storyboard
+++ b/SimpleMusicPlayer/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fiw-mJ-xOt">
-                                <rect key="frame" x="16" y="47" width="358" height="714"/>
+                                <rect key="frame" x="16" y="47" width="358" height="342"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -119,7 +119,23 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RTs-bH-8CB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1930.7692307692307" y="-2.1327014218009479"/>
+            <point key="canvasLocation" x="1931" y="-98"/>
+        </scene>
+        <!--Chart-->
+        <scene sceneID="d0I-Ut-L2C">
+            <objects>
+                <viewController storyboardIdentifier="chartView" id="Li7-JQ-FYt" customClass="ChartViewController" customModule="SimpleMusicPlayer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lfW-5V-KBz">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="E2p-E2-nmy"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Chart" image="chart.pie" catalog="system" selectedImage="chart.pie.fill" id="Zc0-eB-dkk"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vO5-dW-YHI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1931" y="570"/>
         </scene>
         <!--Settings-->
         <scene sceneID="Fsu-8U-MBP">
@@ -154,7 +170,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MWF-m8-5VF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1931" y="762"/>
+            <point key="canvasLocation" x="1931" y="1236"/>
         </scene>
         <!--Player View Controller-->
         <scene sceneID="2n7-wp-K4E">
@@ -334,7 +350,8 @@
                     <connections>
                         <segue destination="Asr-6I-71f" kind="relationship" relationship="viewControllers" id="PW1-12-8Ll"/>
                         <segue destination="4Kj-Iz-gf7" kind="relationship" relationship="viewControllers" id="Rik-dx-Jac"/>
-                        <segue destination="sg4-K3-HkI" kind="relationship" relationship="viewControllers" id="gZV-ec-vUm"/>
+                        <segue destination="Li7-JQ-FYt" kind="relationship" relationship="viewControllers" id="V2E-sN-gjr"/>
+                        <segue destination="sg4-K3-HkI" kind="relationship" relationship="viewControllers" id="w6C-Tv-6Fj"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qs8-aT-Kcg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -346,6 +363,8 @@
         <image name="backward.fill" catalog="system" width="128" height="77"/>
         <image name="chart.bar" catalog="system" width="128" height="89"/>
         <image name="chart.bar.fill" catalog="system" width="128" height="90"/>
+        <image name="chart.pie" catalog="system" width="128" height="123"/>
+        <image name="chart.pie.fill" catalog="system" width="128" height="123"/>
         <image name="forward.fill" catalog="system" width="128" height="77"/>
         <image name="gearshape" catalog="system" width="128" height="123"/>
         <image name="gearshape.fill" catalog="system" width="128" height="123"/>
