--- a/SimpleMusicPlayer/Base.lproj/Main.storyboard
+++ b/SimpleMusicPlayer/Base.lproj/Main.storyboard
@@ -330,16 +330,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GCS-CZ-qTp">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GCS-CZ-qTp">
                                 <rect key="frame" x="75" y="358" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3UW-Sp-wdk">
+                                <rect key="frame" x="26" y="47" width="62" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Back"/>
+                                <connections>
+                                    <action selector="pressedBack:" destination="WCQ-Rp-ggj" eventType="touchUpInside" id="OKR-2R-0Af"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SCc-ho-EPX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="GCS-CZ-qTp" firstAttribute="centerX" secondItem="GTy-2h-XGc" secondAttribute="centerX" id="X0W-lt-bqY"/>
-                            <constraint firstItem="GCS-CZ-qTp" firstAttribute="centerY" secondItem="GTy-2h-XGc" secondAttribute="centerY" id="vJH-U6-nqh"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="image" destination="GCS-CZ-qTp" id="Ajy-Of-Lkm"/>
